<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sample_collection"
            android:icon="@mipmap/ic_sample_collection"
            android:title="@string/nav_sample_collection" />

        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/ic_search"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_data_upload"
            android:icon="@mipmap/ic_data_upload"
            android:title="@string/nav_data_upload" />

        <item
            android:id="@+id/nav_Sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/sync" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/logout1" />
    </group>
</menu>
